css/style.css
/*Overrides*/
#bootstrapoverrides {
    position: absolute;
    height:100%;
    width: 100%;
    margin:0px;
    padding:0px;
    border-radius: 0px !important;
    /*color:#606060;*/
    /*background-color:#E8E8E8;*/
    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
}

.wrapper {
    margin: 50px 0vw;
}

#bootstrapoverrides_ethos {
    position: absolute;
    height:100%;
    width: 100%;
    margin:0px;
    padding:0px;
    border-radius: 0px !important;
    /*color:#606060;*/
    /*background-color:#E8E8E8;*/
    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
}

/*custom font for ethos fade-in text stuff*/
#bootstrapoverrides_ethos h1 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h2 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h3 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h4 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h5 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h6 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos p { font-family: 'Merriweather', serif; }



/*I have fonts sepearated from the #bootstrapoverrides css because otherwise the css is not 'ranked' high enough to override the default bootstrap css. I think this might be better best practices*/ 
h1, h2, h3, h4, h5, h6, p {
    font-family: 'Raleway', sans-serif; 
    /*font-family: 'Merriweather', serif;*/
    /*font-family: 'Lato', sans-serif*/
}

#bootstrapoverrides button {
    border-radius: 0 !important;
}

.row {
    width:100vw;
    margin-left:0px;
    margin-right:0px;
    padding-left: 0px;
    padding-right:0px;
}

.wow {visibility: hidden;}


.text-vertical-center {
    text-align: center;
    vertical-align: middle;
}

.alignright {
    text-align: right;
    vertical-align: middle;
}

#ethos {
    top:0;
    height: 100%;
    position: fixed;
    background-color: white;
    z-index: 10; 
    width: 100%;
    text-align: center;
    padding: 10% 8%;
}

#map {
    position: fixed;
    top:0;
    bottom:0;
    width: 100%; /*width 80% with right:0*/;
    z-index: 0;
}

#map canvas {
    cursor:crosshair;
}

.draw {
    position:relative;
    z-index:1;
    width:80px;
    height:80px;
    padding:20px;
}

#topRightControls {
    position: fixed;
    width:50px;
    top: 12vh;
    right: 2%;
    z-index: 2;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
    align-items: end;
}

.mapboxgl-ctrl-group, .mapboxgl-ctrl-geocoder {
    border: solid 2px #8a8472;
    border-radius: 0px; 
    box-shadow: 0px;
}



#topRightControls > .mapboxgl-ctrl-group {
    float:right;
    margin-bottom: 15px;
}

#topRightControls > .mapboxgl-ctrl-geocoder {
    background-color: red;
    width: 500px;
    margin-bottom: 15px;
}

.newbox {
    position: fixed;
    width: 50vw;
    margin: 0 25vw;
    text-align:center;
    top: 10px;
}

.geocoder {
    position: relative;
    z-index: 1;
    width: 50vw;
}

#geocoder .mapboxgl-ctrl-geocoder{
    box-shadow: 3px 3px 6px grey;
    margin: 0 20px;
    height: 6vh;
}

#geocoder .mapboxgl-ctrl-geocoder--icon-search {
    display: none;
}

.mapboxgl-ctrl-geocoder input[type='text'] {
    font-size: 3vh;
    margin:0px 5px;
    height:100%;
}

#directionhere {
    position: relative;
}

.directionsbuttonhidden {
    top:-30px;
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    transition:all 0.4s;
}

.directionbuttonvisable {
    top: 20px;
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    transition:all 0.4s;
}



    #slidenumber {
    text-align: end;
    position: fixed;
    width: 350px;
    bottom: 25px;
    right: 20px;
    z-index: 2;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
}



#footer {
height:1px;
width:100%;
z-index: 3;
bottom:40px;
position:fixed;
margin:0 auto;
text-align: center;
}

#footer > a > i {
    color:grey;
    padding:5px;
    -webkit-transform:scale(0.8);
    -moz-transform:scale(0.8);
    -o-transform:scale(0.8); 
    -webkit-transition-duration: 0.5s; 
    -moz-transition-duration: 0.5s;
    -o-transition-duration: 0.5s;
}

#footer > a > i:hover {
    color:#62adf3;
    -webkit-transform:scale(1.2); 
    -moz-transform:scale(1.2); 
    -o-transform:scale(1.2); 
    -webkit-transition-duration: 0.3s; 
    -moz-transition-duration: 0.3s;
    -o-transition-duration: 0.3s;
}

#toolbarCollapse {
    position: fixed;
    top: 20px;
    left: 150px; 
    z-index: 2;
    width: 40px;
    height: 40px;
}

#toolbarCollapse span {
    width: 80%;
    height: 2px;
    margin: 0 auto;
    display: block;
    background: #555;
    transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
}

#toolbarCollapse span:first-of-type {
    /* rotate first one */
    transform: rotate(45deg) translate(2px, 2px);
}
#toolbarCollapse span:nth-of-type(2) {
    /* second one is not visible */
    opacity: 0;
}
#toolbarCollapse span:last-of-type {
    /* rotate third one */
    transform: rotate(-45deg) translate(1px, -1px);
}

#toolbarCollapse.active span {
    /* no rotation */
    transform: none;
    /* all bars are visible */
    opacity: 1;
    margin: 5px auto;
}
/* ... */

